<resources>
    <string name="app_name">Tugas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_skill">Skill</string>
    <string name="skill">Skill</string>
    <string name="title_skill_detail">Skill</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>